Correction of errors in the README

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Это мой программа созданная мной в рамках дипломного проекта в Уральском Государственном Университете Путей Сообщения (УрГУПС).
+Это программа созданная мной в рамках дипломного проекта в Уральском Государственном Университете Путей Сообщения (УрГУПС).
 В проекте используется сторонняя библиотека wiringPi https://git.drogon.net/?p=wiringPi;a=summary
 На GitHub есть неофициальное зеркало данного репозитория с модификациями под другие языки программирования, но я их не смотрел, и соответственно не могу утверждать, что с ними мой проект соберется и заработает так как задумано.
 
